--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,50 @@
+#about{
+    padding-top: 8vh;
+    height:200vh;
+    display:block;
+}
+.intro{
+    display:flex;
+    justify-content: flex-start;
+    margin-top: 5px;
+    gap: 5vw;
+    height: 50vh;
+}
+
 .headshot{
-    width: 37.5vw;
+    display:flex;
+    justify-content: flex-end;
+    width: 45%;
+}
+
+.headshot-img{
+    height: 100%;
+    border-radius: 0.7vw;
+    /* border:2px solid rgb(78, 88, 79) */
+}
+
+.bio{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 3vh;
+    width: 40%;
+
+}
+
+.bio p{
+    font-family: "Comic Sans";
+}
+
+.hello{
+    font-size: 3vw;
+}
+
+.about-me{
+    font-size:1.5vw;
+}
+
+.skills{
+    height: vh;
 }
