--- a/css/base.css
+++ b/css/base.css
@@ -5,12 +5,27 @@
     padding: 0;
 }
 
-body{
-    background-color: #7f9483;
-    font-family: "Consolas, 'Courier New', monospace";
-    
+html{
+    font-size: 1.5vw;
 }
 
+body{
+    background-color: #7f9483;
+    font-family: 'Inconsolata', monospace; 
+    font-size: 1rem;  
+}
+
+h1{
+    font-size: 3rem;
+}
+
+h2{
+    font-size: 2rem;
+}
+
+p{
+    font-size: 1rem;
+}
 #content{
     margin-left:8vw;
     margin-right:13vw;
