--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,7 @@
     padding-top: 5vh;
     height:200vh;
     display:block;
-    /* background-color: #909f90; */
+    background-color: #909f90;
 
 
 }
@@ -26,7 +26,6 @@
 
 .headshot img{
     width: 100%;
-    height: auto;
     border-radius: 0.7vw;
 
 }
@@ -71,14 +70,38 @@
 }
 
 .skills{
-    margin-top: 8vh;
-    height: 50vh;
-
+    margin-top: 10vh;
     display: flex;
-    justify-content: center;
-    border: 1px solid white;
+    gap: 1.5vw;
+    flex-direction: column;
+    align-items: center;
 }
 
-.skills h1{
+.skills-container{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr); 
+    grid-template-rows: repeat(2, 1fr);
+    gap: 2vw;
+    width: 90%;
+}
+
+.skills-container > div div{
+    display: flex;
+    align-items: center;
+    gap:8%;
+    margin-top: 2vw;
+    margin-bottom: 1.6vw;
+    padding-bottom: 1%;
+    border-bottom: 0.2vw solid black;
+}
+
+.skills-container img{
+    height: 2.9vw;
+}
+
+
+
+.skills-container ul{
+    list-style: none;
 
 }
