--- a/css/intro.css
+++ b/css/intro.css
@@ -1,12 +1,12 @@
 #about{
     padding-top: 2vh;
-    height:200vh;
+    height:fit-content;
     display:block;
 }
 
 #intro{
     background-color: #909f90;
-    border-radius: 0.7vw;
+    border-radius: 1vw;
     padding-left: 8vw;
     padding-top: 5vh;
     padding-bottom: 5vh;
@@ -26,7 +26,7 @@
 
 .headshot img{
     width: 100%;
-    border-radius: 0.7vw;
+    border-radius: 1vw;
 
 }
 
