Added portfolio to projects and added styling to project slides

--- a/css/base.css
+++ b/css/base.css
@@ -9,6 +9,7 @@ html{
     font-size: 1.3vw;
 }
 
+/* #7f9483  rgb(167, 193, 182) rgb(169, 189, 180) */
 body{
     background-color: #7f9483;
     font-family: 'Roboto','Montserrat', sans-serif;
