--- a/css/projects.css
+++ b/css/projects.css
@@ -3,7 +3,7 @@
     padding-top: 5vh;
     margin-top: 5vh;
     display: flex;
-    gap: 1.5vw;
+    gap: 4vw;
     flex-direction: column;
     align-items: center;
 }
@@ -12,9 +12,7 @@
     display: flex;
     align-items: center;
     width: 85%;
-
 }
-
 
 #chevron{
     position: static;
@@ -24,29 +22,92 @@
 
 #chevron:hover{
     opacity: 0.75;
+    transform: scale(1.1);
 }
 
 .swiper {
-    width: 85%;
-    height: 40vw;
+    width: 80%;
+
     border-radius: 1vw;
 }
 
 
 .swiper-container .swiper-slide{
-    background-color: #909f90;
-
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3vw;
     justify-content: center;
     align-items: center;
 }
 
+.project-image{
+    width: 100%;
+    border-radius: 1vw;
+    transition: transform 0.9s ease;
+}
 
-#pagination{
+.project-image:hover{
+    transform: scale(0.93)
+}
+
+.description-container{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.project-subtitle{
+    margin-top: 0.7vw;
+}
+
+.project-description{
+    margin-top: 2vw;
+}
+
+.link-box{
+    margin-top: 3vw;
+    gap: 4vw;
+    display: flex;
+    
+}
+
+.link-box .button{
+    width: 10vw;
+    height: 4.5vw;
+    border-radius: 0.4vw;
+    background-color: rgb(158, 191, 177);
+    box-shadow: 
+    inset 0 2px 5px  rgba(255,255,255,0.3),
+    inset 0 -2px 3px rgba(29, 29, 29, 0.4);
     display: flex;
     justify-content: center;
     align-items: center;
-    position: static;
+    gap: 10%;
+
+}
+
+.link-box .button:hover{
+    background-color: rgb(150, 179, 169);
+}
+
+
+.link-box .button img{
+    height: 30%;
+}
+
+#git-button-img{
+    height: 40%;
+}
+
+.link-box .button p {
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+
+.swiper-pagination{
+    position: static !important;
+    margin-top: 1vw;
 
 }
 
@@ -63,3 +124,4 @@
     height: 0.7vw;
     width: 0.7vw;
 }
+
