--- a/css/experience.css
+++ b/css/experience.css
@@ -1,77 +1,109 @@
 .experience{
     display: flex;
-    gap: 1.5vw;
+    gap: 3.5vw;
     flex-direction: column;
     align-items: center;
-    margin-top: 3vh;
-    padding-top: 5vh;
+    margin-top: 7vh;
     padding-bottom: 5vh;
-    background-color: #909f90;
-    border-radius:1vw;
     height: fit-content;
 }
 
+
 .experience-tree{
-    width: 100%;
+    width: 95%;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
 .tree-side{
     display: flex;
+    padding-top: 2vw;
     flex-direction: column;
     gap: 10vw;
 }
 
-#left-tree{
-    padding-top: 15vw;
-    border-right: 0.2rem solid black;
-}
 
 #right-tree{
+    padding-top: 17vw;
     border-left: 0.2rem solid black;
 
 }
 
 .tree-node{
     width: 100%;
-    height: 18vw;
+    height: fit-content;
     display: grid;
+    column-gap: 2vw; /* Adjust distance between exp entries and branch leafs */
 
 }
 
 #left-tree .tree-node{
-    grid-template-columns: 7fr 1fr;
+    grid-template-columns: 9fr 1fr;
 }
 
 #right-tree .tree-node{
-    grid-template-columns: 1fr 7fr;
+    grid-template-columns: 1fr 9fr;
 }
 
-#right-tree .tree-node img{
-    align-self: center;
-    transform: rotate(-1deg);
-    position: relative;
-    left: -.1vw;
-    width: 100%;
-
+.branch{
+    margin-top: 1.5rem;
+    display: flex;
 }
 
-#left-tree .tree-node img{
-    align-self: center;
-    justify-self: end;
-    transform: rotate(-1.2deg);
+.leaf{
     position: relative;
-    right: -.1vw;
-    width: 100%;
+    width: 1rem;
+    height: 1rem;
+    border: 0.2rem solid black;
+    background-color: #909f90;
+    border-radius: 50%;
+    box-sizing: border-box;
+    left: 0.05rem;
+}
+
+#right-tree .leaf{
+    left: -0.05rem;
+}
+
+.branch-line{
+    position: relative;
+    background-color: black;
+    height:0.2rem;
+    flex-grow: 1;
+    margin-top: 0.4rem;
 
 }
 
 .exp-content{
+    background-color: #909f90;
+    border-radius: 1vw;
+    padding: 1rem;
+}
 
+.organization{
+    margin-top: 0.5vw;
+}
+.achievements{
+    list-style-position: inside;
+    margin-top: 1vw;
+}
+
+.achievements li{
+    padding-left: 1.5em; 
+    text-indent: -1em;
+    padding: 0.3rem 1.5em;
+}
+.date{
+    margin-top: 1vw;
+    display: flex;
+    align-items: center;
+    gap: 1vw;
 }
 
 
+.calendar{
+    width: 1.3vw;
+}
 
 
 
