--- a/css/projects.css
+++ b/css/projects.css
@@ -1,6 +1,6 @@
 #projects{
-    height: 100vh;
     padding-top: 5vh;
+    padding-bottom: 5vh;
     margin-top: 5vh;
     display: flex;
     gap: 4vw;
