--- a/css/projects.css
+++ b/css/projects.css
@@ -71,6 +71,10 @@
     
 }
 
+/* background-color: rgb(158, 191, 177);
+    box-shadow: 
+    inset 0 2px 5px  rgba(255,255,255,0.3),
+    inset 0 -2px 3px rgba(29, 29, 29, 0.4); */
 .link-box .button{
     width: 10vw;
     height: 4.5vw;
