--- a/css/dots.css
+++ b/css/dots.css
@@ -4,29 +4,15 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    pointer-events: none; /* Ensures dots don't interfere with mouse events */
-    z-index: -1; /* Places dots behind other content */
+    height: 100%;/* Ensures dots don't interfere with mouse events */
+    z-index: -1; 
 }
 
 .dot {
     position: absolute;
-    width: 0.2rem;
-    height: 0.2rem;
+    width: 0.25rem;
+    height: 0.25rem;
     border-radius: 50%;
-    background-color: rgba(156, 188, 177, 0.6); /* Adjust color and opacity as needed */
-    animation: drift 300s infinite linear; /* Adjust animation duration and timing */
+    background-color: rgba(233, 230, 178, 0.6); 
 }
 
-
-@keyframes drift {
-    0% {
-        transform: translate(0, 0);
-    }
-    50% {
-        transform: translate(100vw, 100vh); /* Adjust distance as needed */
-    }
-    100% {
-        transform: translate(0, 0);
-    }
-}
