--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,83 @@
-footer{
-    height: 30vh;
-    background-color: #45514a;
+footer p{
+    color: white;
+    opacity: 0.8;
+    font-size: 0.9rem;
+    font-weight: 500;
 }
+
+footer{
+    height: 25vh;
+    background-color: #45514a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 9vw;
+    padding-right: 15vw;
+}
+
+
+
+.personal-info-buttons{
+    display: flex;
+    align-items: center;
+    gap: 8vw;
+
+}
+
+.footer-signature{
+    margin-top:5vh;
+    opacity: 0.7;
+    width: 25vw;
+}
+
+.personal-info-buttons{
+    display: flex;
+    gap: 35vw;
+    margin-bottom: 2.5vh;
+}
+
+.button{
+    width: 20vw;
+    height: 4vw;
+    border-radius: 0.4vw;
+    background: linear-gradient(145deg, #3e4943, #4a574f);
+    box-shadow:  inset 0.35rem 0.35rem 0.7rem rgba(55, 65, 59, 1),
+                 inset -0.35rem 0.35rem 0.7rem rgba(83, 97, 89, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+}
+
+footer .button:hover p{
+    opacity: 0.5;
+}
+
+footer .legal-info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    margin-bottom: 2vh;
+}
+
+footer .legal-info > div{
+    width: 50%;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+footer .copyright, footer #icons8{
+    opacity: 0.7;
+    color: white;
+    font-size: 0.75rem;
+}
+
+.copyright{
+    border-right: 0.07rem solid rgba(255, 255, 255, 0.75);
+    text-align: end
+}
+
+
+
+
