--- a/css/projects.css
+++ b/css/projects.css
@@ -11,7 +11,7 @@
 .swiper-container{
     display: flex;
     align-items: center;
-    width: 85%;
+    width: 90%;
 }
 
 #chevron{
@@ -21,33 +21,36 @@
 }
 
 #chevron:hover{
-    opacity: 0.75;
-    transform: scale(1.1);
+    scale: 0.97;
 }
 
 .swiper {
-    width: 80%;
+    width: 83%;
+    border-radius: 2vw;
+    box-shadow: inset 0.35rem 0.35rem 0.5rem rgba(108, 124, 114, 0.7),
+                inset -0.35rem -0.35rem 0.5rem rgba(141, 154, 139, 0.7);
 
-    border-radius: 1vw;
+
 }
 
-
-.swiper-container .swiper-slide{
+.swiper-container .slide-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 3vw;
     justify-content: center;
     align-items: center;
+    padding: 1.5rem;
+    
 }
 
 .project-image{
     width: 100%;
     border-radius: 1vw;
-    transition: transform 0.9s ease;
+    transition: transform 1s ease;
 }
 
 .project-image:hover{
-    transform: scale(0.93)
+    transform: scale(0.97)
 }
 
 .description-container{
@@ -66,38 +69,46 @@
 
 .link-box{
     margin-top: 3vw;
-    gap: 4vw;
+    gap: 3vw;
     display: flex;
     
 }
 
-/* background-color: rgb(158, 191, 177);
-    box-shadow: 
-    inset 0 2px 5px  rgba(255,255,255,0.3),
-    inset 0 -2px 3px rgba(29, 29, 29, 0.4); */
-.link-box .button{
+.link-box .button {
     width: 10vw;
     height: 4.5vw;
     border-radius: 0.4vw;
-    background-color: rgb(158, 191, 177);
-    box-shadow: 
-    inset 0 2px 5px  rgba(255,255,255,0.3),
-    inset 0 -2px 3px rgba(29, 29, 29, 0.4);
+    background: linear-gradient(145deg, #7a8f81, #91a896);
+    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 114, 0.6), /* Dark shadow */
+                -0.35rem -0.35rem 0.7rem rgba(151, 167, 155, 0.6); 
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10%;
-
 }
 
-.link-box .button:hover{
-    background-color: rgb(150, 179, 169);
+.link-box .button:hover {
+    box-shadow: inset 0.35rem 0.35rem 0.3rem rgba(108, 124, 114, 0.7), /* Dark shadow */
+                inset -0.35rem -0.35rem 0.6rem rgba(141, 154, 139, 0.5);
 }
-
 
 .link-box .button img{
+    position: relative;
     height: 30%;
 }
+
+.link-box #view-button:hover img{
+    left: 5%;
+}
+
+#code-button img{
+    transition: transform 1s ease-in-out;
+}
+#code-button:hover img{
+    transform: rotate(359deg);
+}
+
+
 
 #git-button-img{
     height: 40%;
