--- a/css/experience.css
+++ b/css/experience.css
@@ -54,16 +54,16 @@
     position: relative;
     width: 1rem;
     height: 1rem;
-    border: 0.2rem solid #000000; /* Dark border color */
-    background-color: #8e9f8e; /* Match the lighter color from exp-content gradient */
+    border: 0.2rem solid #000000; 
+    background-color: #8e9f8e; 
     border-radius: 50%;
     box-sizing: border-box;
     left: 0.05rem;
-    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 111, 0.8), /* Dark shadow */
+    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 111, 0.8), 
                 -0.35rem -0.35rem 0.7rem rgba(141, 154, 139, 0.12);
     box-shadow: 
-        inset 0.1rem 0.1rem 0.3rem rgba(32, 33, 32, 0.6), /* Darker inset shadow */
-        inset -0.1rem -0.1rem 0.3rem rgba(255, 255, 255, 0.6), /* Lighter inset shadow */
+        inset 0.1rem 0.1rem 0.3rem rgba(32, 33, 32, 0.6), 
+        inset -0.1rem -0.1rem 0.3rem rgba(255, 255, 255, 0.6), 
 }
 
 #right-tree .leaf{
@@ -83,8 +83,8 @@
     background: linear-gradient(145deg, #8c9d8c, #7e937e);
     border-radius: 1vw;
     padding: 5vh 8vw;
-    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 111, 0.8), /* Dark shadow */
-                -0.35rem -0.35rem 0.7rem rgba(141, 154, 139, 0.8); /* Light shadow */ 
+    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 111, 0.8), 
+                -0.35rem -0.35rem 0.7rem rgba(141, 154, 139, 0.8); 
     padding: 1rem;
 }
 
