--- a/css/projects.css
+++ b/css/projects.css
@@ -3,12 +3,13 @@
     padding-bottom: 5vh;
     margin-top: 5vh;
     display: flex;
-    gap: 4vw;
+    gap: 2vw;
     flex-direction: column;
     align-items: center;
 }
 
 .swiper-container{
+    margin-top: 2vw;
     display: flex;
     align-items: center;
     width: 90%;
@@ -29,7 +30,6 @@
     border-radius: 2vw;
     box-shadow: inset 0.35rem 0.35rem 0.5rem rgba(108, 124, 114, 0.7),
                 inset -0.35rem -0.35rem 0.5rem rgba(141, 154, 139, 0.7);
-
 
 }
 
@@ -122,21 +122,21 @@
 
 .swiper-pagination{
     position: static !important;
-    margin-top: 1vw;
+    margin-top: 0vw;
 
 }
 
 .swiper-pagination .swiper-pagination-bullet-active{
-    background-color: rgb(189, 220, 207); 
+    background-color: #c8e8e6; 
     box-shadow: 
-        inset 0 2px 5px  rgba(255,255,255,0.3),
-        inset 0 -2px 3px rgba(29, 29, 29, 0.4);
-    height: 0.7vw;
-    width: 0.7vw;
+        inset .3rem .3rem .6rem rgba(163, 177, 171, 0.6), 
+        inset -.3rem -.3rem .6rem rgba(214, 232, 225, 0.6); 
+
 }
 
 .swiper-pagination .swiper-pagination-bullet{
-    height: 0.7vw;
-    width: 0.7vw;
+    height: 1.3vw;
+    width: 1.3vw;
+    margin-right: 10vw;
 }
 
