--- a/css/skills.css
+++ b/css/skills.css
@@ -62,48 +62,12 @@
     border-bottom-right-radius: 1.3vw;
     border-top-left-radius: 2vw;
     border-bottom-left-radius: 2vw;
-    background-color: rgb(196, 226, 213);
+    background-color: #c2eee2;
     box-shadow: 
-        inset 0 2px 9px  rgba(255,255,255,0.3),
-        inset 0 -2px 6px rgba(0,0,0,0.4);
+        inset 0.4rem 0.4rem 0.8rem rgba(0, 0, 0, 0.2), 
+        inset -0.4rem -0.4rem 0.8rem rgba(255, 255, 255, 0.6); 
     position: relative;
     overflow: hidden;
 }
 
-/* .progress-meter > span {
-    display: block;
-    height: 100%;
-    border-radius: 10px; 
-    background-color: #afeee6; 
-    box-shadow:
-        inset 5px 5px 10px #cad4d9, 
-        inset -5px -5px 10px #ffffff; 
-    position: relative;
-    overflow: hidden;
-}
 
-.progress-meter > span::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background: linear-gradient(145deg, #c7e5df, #d5dadb);
-    z-index: -1;
-}
-
-.progress-meter > span::after {
-    content: '';
-    position: absolute;
-    top: 2px;
-    bottom: 2px;
-    left: 2px;
-    width: calc(100% - 4px);
-    background-color: #f0f3f5; 
-    border-radius: 10px; 
-    box-shadow:
-        5px 5px 10px rgba(0, 0, 0, 0.1), 
-        -5px -5px 10px rgba(255, 255, 255, 0.7); 
-    z-index: -2;
-} */
