--- a/css/experience.css
+++ b/css/experience.css
@@ -93,15 +93,12 @@
 }
 
 .achievements {
-    list-style-position: inside; 
     margin-top: 1vw;
-    padding: 0; /* Reset default padding */
+    margin-left: 1.5em;
 }
 
 .achievements li {
-    padding-left: 1.5em;
-    text-indent: -1em;
-    padding: 0.3rem 1.5em; 
+    padding: 0.3rem 0.3em; 
 }
 
 .date{
