--- a/css/projects.css
+++ b/css/projects.css
@@ -1,6 +1,6 @@
 #projects{
     padding-top: 5vh;
-    padding-bottom: 5vh;
+    padding-bottom: 7vh;
     margin-top: 5vh;
     display: flex;
     gap: 2vw;
@@ -79,7 +79,7 @@
     height: 4.5vw;
     border-radius: 0.4vw;
     background: linear-gradient(145deg, #7a8f81, #91a896);
-    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 114, 0.6), /* Dark shadow */
+    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 114, 0.6),
                 -0.35rem -0.35rem 0.7rem rgba(151, 167, 155, 0.6); 
     display: flex;
     justify-content: center;
@@ -88,7 +88,7 @@
 }
 
 .link-box .button:hover {
-    box-shadow: inset 0.35rem 0.35rem 0.3rem rgba(108, 124, 114, 0.7), /* Dark shadow */
+    box-shadow: inset 0.35rem 0.35rem 0.3rem rgba(108, 124, 114, 0.7), 
                 inset -0.35rem -0.35rem 0.6rem rgba(141, 154, 139, 0.5);
 }
 
@@ -122,7 +122,7 @@
 
 .swiper-pagination{
     position: static !important;
-    margin-top: 0vw;
+    margin-top: 0.2vw;
 
 }
 
@@ -135,8 +135,8 @@
 }
 
 .swiper-pagination .swiper-pagination-bullet{
-    height: 1.3vw;
-    width: 1.3vw;
-    margin-right: 10vw;
+    height: 1.5vw;
+    width: 1.5vw;
+    margin-right: 0.75vw !important;
 }
 
