--- a/css/skills.css
+++ b/css/skills.css
@@ -50,7 +50,7 @@
     width: 70%;
     height: 0.8vw;
     border-radius: 2vw;
-    border: 3px solid black;
+    border: .17rem solid black;
 
 }
 
