--- a/css/projects.css
+++ b/css/projects.css
@@ -26,6 +26,7 @@
 }
 
 .swiper {
+    background-color: rgba(127, 148, 131,0.75);
     width: 83%;
     border-radius: 2vw;
     box-shadow: inset 0.35rem 0.35rem 0.5rem rgba(108, 124, 114, 0.7),
