--- a/css/base.css
+++ b/css/base.css
@@ -1,56 +1,55 @@
 /* General Styling */
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-html{
-    font-size: 1.3vw;
+html {
+  font-size: 1.3vw;
 }
 
 /* #7f9483  rgb(167, 193, 182) rgb(169, 189, 180) */
-body{
-    background-color: #7f9483;
-    font-family: sans-serif;
-    font-size: 1rem;  
+body {
+  background-color: #7f9483;
+  font-family: sans-serif;
+  font-size: 1rem;
 }
 
-h1{
-    font-size: 3.3rem;
-    font-weight: 500;
-    font-family: 'Inconsolata','Menlo','Roboto Mono', monospace;
-    align-self: start;
+h1 {
+  font-size: 3.3rem;
+  font-weight: 500;
+  font-family: "Inconsolata", "Menlo", "Roboto Mono", monospace;
+  align-self: start;
 }
 
-h2{
-    font-size: 2rem;
-    font-weight: 400;
+h2 {
+  font-size: 2rem;
+  font-weight: 400;
 }
 
-h3{
-    font: 1.5rem;
-    font-weight: 400;
+h3 {
+  font: 1.5rem;
+  font-weight: 400;
 }
 
-p{
-    font-size: 1.05rem;
-    font-weight: 300;
+p {
+  font-size: 1.05rem;
+  font-weight: 300;
 }
-#content{
-    margin-left:9vw;
-    margin-right:15vw;
-}
-
-a{
-    text-decoration: none;
-    display: block;
-    color: black;
+#content {
+  margin-left: 9vw;
+  margin-right: 15vw;
 }
 
-.section-title{
-    width: 100%;
-    border-bottom: 0.15rem solid black;
-    padding-bottom: 1vw;
+a {
+  text-decoration: none;
+  display: block;
+  color: black;
 }
 
+.section-title {
+  width: 100%;
+  border-bottom: 0.15rem solid black;
+  padding-bottom: 1vw;
+}
