--- a/css/dots.css
+++ b/css/dots.css
@@ -1,18 +1,16 @@
-
 .dot-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;/* Ensures dots don't interfere with mouse events */
-    z-index: -1; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; 
+  z-index: -1;
 }
 
 .dot {
-    position: absolute;
-    width: 0.6vh;
-    height: 0.6vh;
-    border-radius: 50%;
-    background-color: rgba(233, 230, 178, 0.6); 
+  position: absolute;
+  width: 0.6vh;
+  height: 0.6vh;
+  border-radius: 50%;
+  background-color: rgba(233, 230, 178, 0.6);
 }
-
