--- a/css/experience.css
+++ b/css/experience.css
@@ -1,118 +1,107 @@
-.experience{
-    display: flex;
-    gap: 3.5vw;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10vh;
-    padding-bottom: 5vh;
-    height: fit-content;
+.experience {
+  display: flex;
+  gap: 3.5vw;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10vh;
+  padding-bottom: 5vh;
+  height: fit-content;
 }
 
-
-.experience-tree{
-    width: 95%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.experience-tree {
+  width: 95%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.tree-side{
-    display: flex;
-    padding-top: 2vw;
-    flex-direction: column;
-    gap: 10vw;
+.tree-side {
+  display: flex;
+  padding-top: 2vw;
+  flex-direction: column;
+  gap: 10vw;
 }
 
-
-#right-tree{
-    padding-top: 17vw;
-    border-left: 0.2rem solid black;
-
+#right-tree {
+  padding-top: 17vw;
+  border-left: 0.2rem solid black;
 }
 
-.tree-node{
-    width: 100%;
-    height: fit-content;
-    display: grid;
-    column-gap: 2vw; /* Adjust distance between exp entries and branch leafs */
-
+.tree-node {
+  width: 100%;
+  height: fit-content;
+  display: grid;
+  column-gap: 2vw; /* Adjust distance between exp entries and branch leafs */
 }
 
-#left-tree .tree-node{
-    grid-template-columns: 9fr 1fr;
+#left-tree .tree-node {
+  grid-template-columns: 9fr 1fr;
 }
 
-#right-tree .tree-node{
-    grid-template-columns: 1fr 9fr;
+#right-tree .tree-node {
+  grid-template-columns: 1fr 9fr;
 }
 
-.branch{
-    margin-top: 1.5rem;
-    display: flex;
+.branch {
+  margin-top: 1.5rem;
+  display: flex;
 }
 
 .leaf {
-    position: relative;
-    width: 1rem;
-    height: 1rem;
-    border: 0.2rem solid #000000; 
-    background-color: #8e9f8e; 
-    border-radius: 50%;
-    box-sizing: border-box;
-    left: 0.05rem;
-    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 111, 0.8), 
-                -0.35rem -0.35rem 0.7rem rgba(141, 154, 139, 0.12);
-    box-shadow: 
-        inset 0.1rem 0.1rem 0.3rem rgba(32, 33, 32, 0.6), 
-        inset -0.1rem -0.1rem 0.3rem rgba(255, 255, 255, 0.6), 
+  position: relative;
+  width: 1rem;
+  height: 1rem;
+  border: 0.2rem solid #000000;
+  background-color: #8e9f8e;
+  border-radius: 50%;
+  box-sizing: border-box;
+  left: 0.05rem;
+  box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 111, 0.8),
+    -0.35rem -0.35rem 0.7rem rgba(141, 154, 139, 0.12);
+  box-shadow: inset 0.1rem 0.1rem 0.3rem rgba(32, 33, 32, 0.6),
+    inset -0.1rem -0.1rem 0.3rem rgba(255, 255, 255, 0.6);
 }
 
-#right-tree .leaf{
-    left: -0.05rem;
+#right-tree .leaf {
+  left: -0.05rem;
 }
 
-.branch-line{
-    position: relative;
-    background-color: black;
-    height:0.2rem;
-    flex-grow: 1;
-    margin-top: 0.4rem;
-
+.branch-line {
+  position: relative;
+  background-color: black;
+  height: 0.2rem;
+  flex-grow: 1;
+  margin-top: 0.4rem;
 }
 
 .exp-content {
-    background: linear-gradient(145deg, #8c9d8c, #7e937e);
-    border-radius: 1vw;
-    padding: 5vh 8vw;
-    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 111, 0.8), 
-                -0.35rem -0.35rem 0.7rem rgba(141, 154, 139, 0.8); 
-    padding: 1rem;
+  background: linear-gradient(145deg, #8c9d8c, #7e937e);
+  border-radius: 1vw;
+  padding: 5vh 8vw;
+  box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 111, 0.8),
+    -0.35rem -0.35rem 0.7rem rgba(141, 154, 139, 0.8);
+  padding: 1rem;
 }
 
-.organization{
-    margin-top: 0.5vw;
+.organization {
+  margin-top: 0.5vw;
 }
 
 .achievements {
-    margin-top: 1vw;
-    margin-left: 1.5em;
+  margin-top: 1vw;
+  margin-left: 1.5em;
 }
 
 .achievements li {
-    padding: 0.3rem 0.3em; 
+  padding: 0.3rem 0.3em;
 }
 
-.date{
-    margin-top: 1vw;
-    display: flex;
-    align-items: center;
-    gap: 1vw;
+.date {
+  margin-top: 1vw;
+  display: flex;
+  align-items: center;
+  gap: 1vw;
 }
 
-
-.calendar{
-    width: 1.3vw;
+.calendar {
+  width: 1.3vw;
 }
-
-
-
-
