--- a/css/projects.css
+++ b/css/projects.css
@@ -1,143 +1,132 @@
-#projects{
-    padding-top: 5vh;
-    padding-bottom: 7vh;
-    margin-top: 5vh;
-    display: flex;
-    gap: 2vw;
-    flex-direction: column;
-    align-items: center;
+#projects {
+  padding-top: 5vh;
+  padding-bottom: 7vh;
+  margin-top: 5vh;
+  display: flex;
+  gap: 2vw;
+  flex-direction: column;
+  align-items: center;
 }
 
-.swiper-container{
-    margin-top: 2vw;
-    display: flex;
-    align-items: center;
-    width: 90%;
+.swiper-container {
+  margin-top: 2vw;
+  display: flex;
+  align-items: center;
+  width: 90%;
 }
 
-#chevron{
-    position: static;
-    height: 3.2vw;
-    width: auto;
+#chevron {
+  position: static;
+  height: 3.2vw;
+  width: auto;
 }
 
-#chevron:hover{
-    scale: 0.97;
+#chevron:hover {
+  scale: 0.97;
 }
 
 .swiper {
-    background-color: rgba(127, 148, 131,0.75);
-    width: 83%;
-    border-radius: 2vw;
-    box-shadow: inset 0.35rem 0.35rem 0.5rem rgba(108, 124, 114, 0.7),
-                inset -0.35rem -0.35rem 0.5rem rgba(141, 154, 139, 0.7);
-
+  background-color: rgba(127, 148, 131, 0.75);
+  width: 83%;
+  border-radius: 2vw;
+  box-shadow: inset 0.35rem 0.35rem 0.5rem rgba(108, 124, 114, 0.7),
+    inset -0.35rem -0.35rem 0.5rem rgba(141, 154, 139, 0.7);
 }
 
-.swiper-container .slide-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3vw;
-    justify-content: center;
-    align-items: center;
-    padding: 1.5rem;
-    
+.swiper-container .slide-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3vw;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
 }
 
-.project-image{
-    width: 100%;
-    border-radius: 1vw;
-    transition: transform 1s ease;
+.project-image {
+  width: 100%;
+  border-radius: 1vw;
+  transition: transform 1s ease;
 }
 
-.project-image:hover{
-    transform: scale(0.97)
+.project-image:hover {
+  transform: scale(0.97);
 }
 
-.description-container{
-    display: flex;
-    flex-direction: column;
-
+.description-container {
+  display: flex;
+  flex-direction: column;
 }
 
-.project-subtitle{
-    margin-top: 0.7vw;
+.project-subtitle {
+  margin-top: 0.7vw;
 }
 
-.project-description{
-    margin-top: 2vw;
+.project-description {
+  margin-top: 2vw;
 }
 
-.link-box{
-    margin-top: 3vw;
-    gap: 3vw;
-    display: flex;
-    
+.link-box {
+  margin-top: 3vw;
+  gap: 3vw;
+  display: flex;
 }
 
 .link-box .button {
-    width: 10vw;
-    height: 4.5vw;
-    border-radius: 0.4vw;
-    background: linear-gradient(145deg, #7a8f81, #91a896);
-    box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 114, 0.6),
-                -0.35rem -0.35rem 0.7rem rgba(151, 167, 155, 0.6); 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10%;
+  width: 10vw;
+  height: 4.5vw;
+  border-radius: 0.4vw;
+  background: linear-gradient(145deg, #7a8f81, #91a896);
+  box-shadow: 0.35rem 0.35rem 0.7rem rgba(108, 124, 114, 0.6),
+    -0.35rem -0.35rem 0.7rem rgba(151, 167, 155, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10%;
 }
 
 .link-box .button:hover {
-    box-shadow: inset 0.35rem 0.35rem 0.3rem rgba(108, 124, 114, 0.7), 
-                inset -0.35rem -0.35rem 0.6rem rgba(141, 154, 139, 0.5);
+  box-shadow: inset 0.35rem 0.35rem 0.3rem rgba(108, 124, 114, 0.7),
+    inset -0.35rem -0.35rem 0.6rem rgba(141, 154, 139, 0.5);
 }
 
-.link-box .button img{
-    position: relative;
-    height: 30%;
+.link-box .button img {
+  position: relative;
+  height: 30%;
 }
 
-.link-box #view-button:hover img{
-    left: 5%;
+.link-box #view-button:hover img {
+  left: 5%;
 }
 
-#code-button img{
-    transition: transform 1s ease-in-out;
+#code-button img {
+  transition: transform 1s ease-in-out;
 }
-#code-button:hover img{
-    transform: rotate(359deg);
+#code-button:hover img {
+  transform: rotate(359deg);
 }
 
-
-
-#git-button-img{
-    height: 40%;
+#git-button-img {
+  height: 40%;
 }
 
 .link-box .button p {
-    font-size: 1rem;
-    font-weight: 700;
+  font-size: 1rem;
+  font-weight: 700;
 }
 
-
-.swiper-pagination{
-    position: static !important;
-    margin-top: 0.2vw;
-
+.swiper-pagination {
+  position: static !important;
+  margin-top: 0.2vw;
 }
 
-.swiper-pagination .swiper-pagination-bullet-active{
-    background-color: #c8e8e6; 
-    box-shadow: 
-        inset .3rem .3rem .6rem rgba(163, 177, 171, 0.6), 
-        inset -.3rem -.3rem .6rem rgba(214, 232, 225, 0.6); 
-
+.swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #c8e8e6;
+  box-shadow: inset 0.3rem 0.3rem 0.6rem rgba(163, 177, 171, 0.6),
+    inset -0.3rem -0.3rem 0.6rem rgba(214, 232, 225, 0.6);
 }
 
-.swiper-pagination .swiper-pagination-bullet{
-    height: 1.5vw;
-    width: 1.5vw;
-    margin-right: 0.75vw !important;
+.swiper-pagination .swiper-pagination-bullet {
+  height: 1.5vw;
+  width: 1.5vw;
+  margin-right: 0.75vw !important;
 }
-
