--- a/css/skills.css
+++ b/css/skills.css
@@ -1,74 +1,68 @@
-.skills{
-    margin-top: 12vh;
-    display: flex;
-    gap: 1.5vw;
-    flex-direction: column;
-    align-items: center;
-
+.skills {
+  margin-top: 12vh;
+  display: flex;
+  gap: 1.5vw;
+  flex-direction: column;
+  align-items: center;
 }
 
-.skills-container{
-    background-color: rgba(127, 148, 131,0.75);
-    display:grid;
-    grid-template-columns: repeat(2, 1fr); 
-    grid-template-rows: repeat(2, 1fr);
-    gap: 3vw;
-    width: 90%;
-    border-radius: 2vw;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    box-shadow: inset 0.5rem 0.5rem 0.6rem rgba(108, 124, 114, 0.7),
-                inset -0.5rem -0.5rem 0.6rem rgba(141, 154, 139, 0.7);
+.skills-container {
+  background-color: rgba(127, 148, 131, 0.75);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 3vw;
+  width: 90%;
+  border-radius: 2vw;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  box-shadow: inset 0.5rem 0.5rem 0.6rem rgba(108, 124, 114, 0.7),
+    inset -0.5rem -0.5rem 0.6rem rgba(141, 154, 139, 0.7);
 }
 
-
-.skills-container > div > div{
-    display: flex;
-    align-items: center;
-    gap:8%;
-    margin-top: 2vw;
-    margin-bottom: 1.6vw;
-    padding-bottom: 1%;
-    border-bottom: 0.2vw solid black;
+.skills-container > div > div {
+  display: flex;
+  align-items: center;
+  gap: 8%;
+  margin-top: 2vw;
+  margin-bottom: 1.6vw;
+  padding-bottom: 1%;
+  border-bottom: 0.2vw solid black;
 }
 
-.skills-container img{
-    height: 2.9vw;
+.skills-container img {
+  height: 2.9vw;
 }
 
-.skills-container ul{
-    list-style: none;
+.skills-container ul {
+  list-style: none;
 }
 
-.skills-container li{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 1.6vw;
+.skills-container li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1.6vw;
 }
 
-.progress-meter { 
-    width: 70%;
-    height: 0.8vw;
-    border-radius: 2vw;
-    border: .17rem solid black;
-
+.progress-meter {
+  width: 70%;
+  height: 0.8vw;
+  border-radius: 2vw;
+  border: 0.17rem solid black;
 }
 
 /* rgb(196, 226, 213) */
-.progress-meter > span{
-    display: block;
-    height: 100%;
-    border-top-right-radius: 1.3vw;
-    border-bottom-right-radius: 1.3vw;
-    border-top-left-radius: 2vw;
-    border-bottom-left-radius: 2vw;
-    background-color: #c2eee2;
-    box-shadow: 
-        inset 0.4rem 0.4rem 0.8rem rgba(0, 0, 0, 0.2), 
-        inset -0.4rem -0.4rem 0.8rem rgba(255, 255, 255, 0.6); 
-    position: relative;
-    overflow: hidden;
+.progress-meter > span {
+  display: block;
+  height: 100%;
+  border-top-right-radius: 1.3vw;
+  border-bottom-right-radius: 1.3vw;
+  border-top-left-radius: 2vw;
+  border-bottom-left-radius: 2vw;
+  background-color: #c2eee2;
+  box-shadow: inset 0.4rem 0.4rem 0.8rem rgba(0, 0, 0, 0.2),
+    inset -0.4rem -0.4rem 0.8rem rgba(255, 255, 255, 0.6);
+  position: relative;
+  overflow: hidden;
 }
-
-
