--- a/css/projects.css
+++ b/css/projects.css
@@ -31,8 +31,12 @@
   border-radius: 2vw;
   box-shadow: inset 0.35rem 0.35rem 0.5rem rgba(108, 124, 114, 0.7),
     inset -0.35rem -0.35rem 0.5rem rgba(141, 154, 139, 0.7);
+
 }
 
+.swiper-slide{
+  align-self: center;
+}
 .swiper-container .slide-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -129,4 +133,8 @@
   height: 1.5vw;
   width: 1.5vw;
   margin-right: 0.75vw !important;
+}
+
+#avalanche-analysis img{
+  filter: brightness(85%);
 }
