--- a/css/projects.css
+++ b/css/projects.css
@@ -1,4 +1,4 @@
-#projects {
+#personal-projects {
   padding-top: 5vh;
   padding-bottom: 7vh;
   margin-top: 5vh;
@@ -75,7 +75,7 @@
   display: flex;
 }
 
-.link-box .button {
+.button {
   width: 10vw;
   height: 4.5vw;
   border-radius: 0.4vw;
@@ -88,7 +88,7 @@
   gap: 10%;
 }
 
-.link-box .button:hover {
+.button:hover {
   box-shadow: inset 0.35rem 0.35rem 0.3rem rgba(108, 124, 114, 0.7),
     inset -0.35rem -0.35rem 0.6rem rgba(141, 154, 139, 0.5);
 }
